<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/Theme.Mitra.Register"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:title="Register"
            app:collapsedTitleTextAppearance="@color/white"
            app:expandedTitleTextAppearance="@color/white">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/cash_and_mitra_logo"
                android:paddingTop="72dp"
                android:paddingBottom="72dp"
                android:background="@drawable/background_gradient"/>



            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:popupTheme="@style/Theme.Mitra.Register"
                app:titleTextColor="@android:color/white">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_send"
        android:tint="@color/white"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#F2861E"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F8F8F8">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="4dp">

                    <EditText
                        android:id="@+id/et_reg_first_name"
                        style="@style/EditTextRegisterForm"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/round_corner_without_underline"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:hint="Enter First Name"
                        android:inputType="textPersonName"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="4dp">

                    <EditText
                        android:id="@+id/et_reg_last_name"
                        style="@style/EditTextRegisterForm"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/round_corner_without_underline"
                        android:backgroundTint="@color/colorAccent"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:hint="@string/hint_last_name"
                        android:inputType="textPersonName" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="4dp">

                    <EditText
                        android:id="@+id/et_reg_phone"
                        style="@style/EditTextRegisterForm"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/ic_smartphone"
                        android:drawablePadding="10dp"
                        android:hint="@string/hint_phone"
                        android:inputType="number" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="4dp">

                    <EditText
                        android:id="@+id/et_reg_email"
                        style="@style/EditTextRegisterForm"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/ic_envelope"
                        android:drawablePadding="10dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="4dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:paddingBottom="-4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_reg_password"
                            style="@style/EditTextRegisterForm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_padlock"
                            android:drawablePadding="10dp"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="4dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:paddingBottom="-4dp">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_reg_confirm_password"
                            style="@style/EditTextRegisterForm"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:background="@color/white"
                            android:inputType="textPassword"
                            android:drawableStart="@drawable/ic_padlock"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:hint="@string/hint_confirm_password"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_register"
                    style="@style/EditTextRegisterForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button_rounded_corner"
                    android:text="Register"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    style="@style/EditTextRegisterForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal"
                    android:background="#F8F8F8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account? "
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="16dp"/>

                    <TextView
                        android:id="@+id/tv_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>